<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>tsdf_plusplus_lib_ros2</name>
  <version>1.0.0</version>
  <description>TSDF++: Multi-object TSDF fusion for dynamic object tracking and reconstruction. ROS2 build.</description>

  <author email="margarita.grinvald@mavt.ethz.ch">Margarita Grinvald</author>

  <maintainer email="margarita.grinvald@mavt.ethz.ch">Margarita Grinvald</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>voxblox</depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
