<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
  <package format="3">
  <name>tsdf_plusplus_ros2</name>

  <version>1.0.0</version>
  <description>TSDF++ ROS2 interface</description>

  <author email="margarita.grinvald@mavt.ethz.ch">Margarita Grinvald</author>

  <maintainer email="margarita.grinvald@mavt.ethz.ch">Margarita Grinvald</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>tsdf_plusplus_lib_ros2</depend>
  <depend>voxblox</depend>
  <depend>voxblox_msgs</depend>
  <depend>roscpp</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
